--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-PORT = 8000
-DB_HOST = localhost
-DB_USERNAME = root
-DB_PASSWORD = ""
-DB_DBNAME = books
+PORT=8000
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=Dangcapmaimai123
+DB_DATABASE=tranpham
