--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.2",
     "express": "^4.18.2",
     "heroku": "^8.9.0",
     "mysql": "^2.18.1",
